# oc-ai-pipeline

./: .gitignore  DEPLOY.md  Dockerfile  PIPELINE_PATCH.md  TODO.md  auth_manager.py  claude_client.py  customer_conventions_client.py  customer_uuids.csv  diagnose_board.py  fetch_jsons_from_monday.py  gmail_oauth.py  main.py  migrate_board_card_oids.py  migration_pipeline.py  monday_client.py  oc_form_publisher.py  oc_study_creator.py  pipeline.py  playwright_uat.py  probe_board_api.py  probe_ddp_setdefault.py  prompts.py  railway.toml  rebuild_simulator.py  register_all_skills.py  register_protocol_analysis_only.py  register_skills.py  requirements.txt  skills_registry.json  test_json_extraction.py  test_oc_board_import.py  test_publisher.py  test_skills_locally.py  test_slow_forms.py  test_template_build.py  test_upload_slow_forms.py  trainer_integration.py  uat_loader.py
conventions_engine/: __init__.py  applies_when.py  cascade.py  diff.py  effects.py  intersection.py  loader.py  pyproject.toml  record.py  render.py
conventions_engine/conventions/: README.md
conventions_engine/conventions/_audit/: F2_resolution.md  OC7_decomposition_plan.md  update_prompts_audit.md
conventions_engine/conventions/global/: appearance.table_appearance_short_labels.json  appearance.value_unit_pair_side_by_side_layout.json  build_artifacts.item_count_caps_as_warnings.json  clinical_patterns.ae_severity_serious_logic.json  clinical_patterns.bmi_calculation.json  clinical_patterns.consent_date_floor.json  clinical_patterns.dose_calculation_optional.json  clinical_patterns.duration_in_days_optional.json  clinical_patterns.eligibility_verdict_3state_pattern.json  clinical_patterns.endat_relevance_on_ongoing_status.json  clinical_patterns.reminder_notes_gated_by_yn.json  clinical_patterns.sex_dependent_fields_via_sex_cf.json  clinical_patterns.source_ambiguity_clinical_reasoning.json  clinical_patterns.universal_clinical_data_patterns.json  clinical_patterns.universal_conditional_branching.json  field_metadata.cdash_field_naming.json  field_metadata.itemgroup_keep_together_repeating.json  field_metadata.itemgroup_mandatory_on_data_rows.json  form_metadata.form_style_per_purpose.json  form_placement.common_event_safety_admin_placement.json  form_placement.common_visit_safety_admin.json  process.census_hierarchy_reconciliation.json  process.form_definition_lookup_hierarchy.json  process.protocol_data_item_census.json  validation.calculate_requires_readonly.json  validation.decimal_precision_constraint.json  validation.future_date_constraint_on_dates.json  (+3 more)
services/study-build-trainer/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  requirements.txt
(+251 files in other folders)
