[project]
name = "oc-study-build-trainer"
version = "0.1.0"
description = "RAG retrieval microservice for OpenClinica's oc-ai-pipeline. Indexes historical protocol-form pairs and serves them as few-shot examples at pipeline runtime."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "OpenClinica" },
]

dependencies = [
    # Web framework
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",

    # HTTP
    "httpx>=0.27",

    # LLM
    "anthropic>=0.40",

    # Form parsing
    "lxml>=5.1",            # ODM XML
    "openpyxl>=3.1",        # XLSForm
    "pdfplumber>=0.11",     # PDF

    # Embeddings + vector store
    "sentence-transformers>=2.7",
    "sqlite-vec>=0.1",

    # Misc
    "python-multipart>=0.0.9",  # file uploads
    "structlog>=24.1",          # structured logging
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.9",
    "httpx>=0.27",  # also used as a test client for FastAPI
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "core", "workers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
